2004-11-05  Andrew Cagney  <cagney@gnu.org>

	* dwarf2-frame.c (dwarf2_frame_cache): Only complain when both the
	CFI and the init_reg method leave the register unspecified.
	Include the register name in the "Incomplete CFI data" complaint.
	Supress leading zeros in the address.

2004-11-05  Mark Kettenis  <kettenis@gnu.org>

	* dwarf2-frame.c (decode_frame_entry_1): Avoid indirection when
	skipping a personality routine in a CIE augmentation.

2004-11-05  Jeff Johnston  <jjohnstn@redhat.com>

	* defs.h (fatal, vfatal): New function prototypes.
	* stack.c (backtrace_command_stub): Stub to call backtrace_command_1
	via catch_errors.
	(backtrace_command): Change to call backtrace_command_stub via
	catch_errors instead of calling backtrace_command_1 directly.
	(backtrace_full_command): Ditto.
	* utils.c (error_stream_1): New static function.
	(verror): Change to call error_stream_1 instead of error_stream.
	(error_stream): Call error_stream_1 with RETURN_ERROR argument.
	(vfatal, fatal): New functions.

2004-11-05  Andrew Cagney  <cagney@gnu.org>

	* stack.c (parse_frame_specification_1): Clear selected_frame_p
	when not using selected frame.

2004-11-05  Mark Kettenis  <kettenis@jive.nl>

	* dwarf2-frame.c (decode_frame_entry_1): Correctly skip
	personality routine in a CIE augmentation.

2004-11-05  Felix Lee  <felix+log1@specifixinc.com>

	* stack.c (set_current_sal_from_frame): New function.
	(print_args_stub): Use it.
	(print_frame_info): Don't set sal here.

2004-11-04  Mark Kettenis  <kettenis@gnu.org>

	* dwarf2-frame.c (read_encoded_value): Change type of third
	argument to `unsigned char *'.  Add support for LEB128 encodings.

2004-11-04  Jim Blandy  <jimb@redhat.com>

	* gdbtypes.c (make_qualified_type): Doc fix.  Add assertion to
	prevent cross-objfile references.
	(make_cv_type): Doc fix.  Don't create cross-objfile references,
	even for stub types.
	(replace_type): Add assertion to prevent cross-objfile references.